--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
     background: url('img.png') top center;
-    background-size: cover;
+    background-size: 100% auto;
     background-repeat: no-repeat;
 }
