--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 body {
+    padding: 0;
+    margin: 0;
+}
+
+head, body {
+    height: 100vh;
+    background-color: rgb(208, 13, 13);
+
+}
+
+div {
     background: url('img.png') top center;
-    background-size: 100% auto;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
+    height: 100%;
+
 }
